# homework-2

./: CMakeLists.txt  divide matrix.cpp  matrixJob.cpp  multiply matrix by a number.cpp  transpose matrix.cpp
